--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,34 @@
-#type {
-color: brown;
-
+#background{
+   background-color: black;  
+ 
 }
+
+#logo {
+  display: flex;
+  justify-content: center;
+ /*  align-items: center; */
+  margin-right: 200px;
+  /* width: 20px; 
+  height: auto;  */
+}
+
+#headline {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 200px;
+  font-size: 30px; 
+  font-family: 'Architects Daughter', cursive;
+  
+}
+
+#section-movie {
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+  margin-right: 200px;
+  margin-top: 10px;
+ 
+}
+
