--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,46 @@
 #background{
    background-color: black;  
- 
 }
 
-#logo {
+main {
   display: flex;
-  justify-content: center;
- /*  align-items: center; */
-  margin-right: 200px;
-  /* width: 20px; 
-  height: auto;  */
+  flex-direction: column;
+  align-items: center;
 }
 
 #headline {
   color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 200px;
   font-size: 30px; 
   font-family: 'Architects Daughter', cursive;
   
 }
 
-#input-section {
-  display: flex;
-  justify-content: center; 
-  align-items: center;
-  margin-right: 200px;
-  margin-top: 10px;
-  padding-inline: 40px;
- 
-}
 
-#input {
-  font-size: 14px; 
-  font-family: 'Architects Daughter', cursive;
-}
 #type {
   margin-left: 25px;
   font-size: 14px; 
   font-family: 'Architects Daughter', cursive;
 }
 
-#movie-section {
-  color: white;
- 
+
+div {
+display: flex;
+flex-direction: column;
+align-items: center;
+color: white;
+font-size: 20px; 
+font-family: 'Architects Daughter', cursive;
+padding-bottom: 50px;
+
 }
+
+a:link, a:visited {
+color: rgb(140, 155, 60);
+padding-top: 20px;
+}
+
+a:hover {
+color: rgb(120, 0, 0);
+
+}
+
